--- a/index.html
+++ b/index.html
@@ -508,6 +508,10 @@
                         <span>darwinsimplicio20@gmail.com</span>
                     </div>
                     <div class="contact-item">
+                        <i class="fas fa-desktop"></i>
+                        <span>darwinsimplicio20@gmail.com</span>
+                    </div>
+                    <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Caloocan City, Philippines</span>
                     </div>
