--- a/index.html
+++ b/index.html
@@ -509,11 +509,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-desktop"></i>
-                        <span>darwinsimplicio20@gmail.com</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-desktop"></i>
-                        <span>darwinsimplicio20@gmail.com</span>
+                        <span>https://darwinsimplicio.github.io/cv_web</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
