--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-desktop"></i>
-                        <span>https://darwinsimplicio.github.io/cv_web</span>
+                        <span>https://darwinsimplicio.github.io/cv_web/</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
